--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x8cbef4785954df48204c8d270156e6b","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xe381f8a82ed4de0868eb53a21da38b0","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -122,9 +122,9 @@ From: &lt;a name=cite-sabinFreeStreetsWorld2023&gt;&lt;/a&gt;[Sabin (2023)](#bib
 ]
 
 .pull-right[ 
-* Jakarta, the capital of Indonesia, has been at risk of becoming the first entire mega city to sink. This is attributed to various factors such as rising sea levels, land subsidence, construction on soft sediments, and natural sediment compaction. 
+* Jakarta has been at risk of becoming the first entire megacity to sink. This is attributed to various factors such as rising sea levels, land subsidence, construction on soft sediments, and natural sediment compaction ([Gunawan, 2016](#bib-julianagunawanBuildingIndonesiaResilience2016)). 
 
-* The northern part of Jakarta currently sits approximately 2.5 meters below sea level, with estimates indicating that by 2050, 40% of the area will be sunk. Each year, Jakarta experiences between 1 to 10 sinking incidents. ]
+* The northern part of Jakarta currently sits approximately 2.5 meters below sea level, with estimates indicating that by 2050, 40% of the area will be sunk. Each year, Jakarta experiences between 1 to 10 sinking incidents &lt;a name=cite-tanJakartaSinksRising2023&gt;&lt;/a&gt;([Tan, 2023](#bib-tanJakartaSinksRising2023)). ] 
 
 ]
 
@@ -171,7 +171,7 @@ From: &lt;a name=cite-sabinFreeStreetsWorld2023&gt;&lt;/a&gt;[Sabin (2023)](#bib
 ## Causes of Subsidence
 
 .pull-left[
-* Physical factors: natural sediment compaction/ consolidation of alluvium soil and earthquakes. Indonesia is located on destructive plate boundaries where earthquakes happen frequently &lt;a name=cite-bottLandSubsidenceJakarta2021&gt;&lt;/a&gt;([Bott, Schöne, Illigner, Haghshenas Haghighi, Gisevius, and Braun, 2021a](#bib-bottLandSubsidenceJakarta2021)).
+* Physical factors: natural sediment compaction/ consolidation of alluvium soil and earthquakes. Indonesia is located on destructive plate boundaries where earthquakes happen frequently &lt;a name=cite-bottLandSubsidenceJakarta2021&gt;&lt;/a&gt;([Bott, Schöne, Illigner, Haghshenas Haghighi, Gisevius, and Braun, 2021](#bib-bottLandSubsidenceJakarta2021)).
 
 * Human/ social factors: groundwater extraction, rapid urban development, improper agricultural practices &lt;a name=cite-abidinLandSubsidenceJakarta2011&gt;&lt;/a&gt;([Abidin, Andreas, Gumilar, Fukuda, Pohan, and Deguchi, 2011](#bib-abidinLandSubsidenceJakarta2011)). 
 
@@ -414,7 +414,7 @@ The NCICD considers a variety of aspects such as flood safety, land reclamation,
 
 1. Combine hazard and vulnerability maps by producing a risk index.
 
-1. Using risk index, produce a risk map showing areas at very low risk, low risk, moderate risk, high risk and very high risk &lt;a name=cite-bhattaraiRiskAssessmentLand2017&gt;&lt;/a&gt;([Bhattarai and Kondoh, 2017a](#bib-bhattaraiRiskAssessmentLand2017)). 
+1. Using risk index, produce a risk map showing areas at very low risk, low risk, moderate risk, high risk and very high risk &lt;a name=cite-bhattaraiRiskAssessmentLand2017&gt;&lt;/a&gt;([Bhattarai and Kondoh, 2017](#bib-bhattaraiRiskAssessmentLand2017)). 
 
 ![](multicriteria_analysis.png)
 ---
@@ -580,7 +580,7 @@ Risk Map
 
 &lt;img src="eg_risk.png" width="87%" style="display: block; margin: auto;" /&gt;
 
-Source: [Bhattarai and Kondoh (2017a)](#bib-bhattaraiRiskAssessmentLand2017)
+Source: [Bhattarai and Kondoh (2017)](#bib-bhattaraiRiskAssessmentLand2017)
 ]
 
 
@@ -598,7 +598,7 @@ class: top
 
 &lt;img src="RA.jpg" width="100%" style="display: block; margin: auto;" /&gt;
 &lt;a name=cite-tademayurApplicationsRemoteSensing&gt;&lt;/a&gt;([Tade Mayur, 2022](#bib-tademayurApplicationsRemoteSensing); [Taftazani, Kazama, and Takizawa, 2022](#bib-taftazaniSpatialAnalysisGroundwater2022))
-([Bott, Schöne, Illigner et al., 2021a](#bib-bottLandSubsidenceJakarta2021))
+([Bott, Schöne, Illigner et al., 2021](#bib-bottLandSubsidenceJakarta2021))
 ---
 
 ## Project: Gantt Chart
@@ -721,7 +721,7 @@ class: top
 
 - Unexpected employee turnover.
 
-- Unexpected data cost at freeware platforms ([Bott, Schöne, Illigner et al., 2021a](#bib-bottLandSubsidenceJakarta2021)).
+- Unexpected data cost at freeware platforms ([Bott, Schöne, Illigner et al., 2021](#bib-bottLandSubsidenceJakarta2021)).
 
 - Change of government.
  
@@ -793,12 +793,12 @@ Subsidence: The Forgotten Enigma of Groundwater (Over)Extraction". In:
 _American Economic Association_.
 
 &lt;a name=bib-bhattaraiRiskAssessmentLand2017&gt;&lt;/a&gt;[Bhattarai, R. and A.
-Kondoh](#cite-bhattaraiRiskAssessmentLand2017) (2017a). "Risk
-Assessment of Land Subsidence in Kathmandu Valley, Nepal, Using Remote
-Sensing and GIS". In: _Advances in Remote Sensing_ 06.02, p. 132.
+Kondoh](#cite-bhattaraiRiskAssessmentLand2017) (2017). "Risk Assessment
+of Land Subsidence in Kathmandu Valley, Nepal, Using Remote Sensing and
+GIS". In: _Advances in Remote Sensing_ 06.02, p. 132.
 
 &lt;a name=bib-bottLandSubsidenceJakarta2021&gt;&lt;/a&gt;[Bott, L., T. Schöne, J.
-Illigner, et al.](#cite-bottLandSubsidenceJakarta2021) (2021a). "Land
+Illigner, et al.](#cite-bottLandSubsidenceJakarta2021) (2021). "Land
 Subsidence in Jakarta and Semarang Bay - The Relationship between
 Physical Processes, Risk Perception, and Household Adaptation". In:
 _Ocean &amp; Coastal Management_ 211, p. 105775.
