--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"f18f661c50d04a67b1e1998d50b8e88b","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x9e563a02b0b457f800efa9745090f1b","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -193,23 +193,6 @@ From: &lt;a name=cite-sheryltiantongleeJakartaIndonesiaCapital2023&gt;&lt;/a&gt;
 
 .panelset[
 
-.panel[.panel-name[Infrastructure]
-
-* Cracking of permanent constructions and roads.
-
-* Tilting of houses and buildings.
-
-* “Sinking” of houses and buildings.
-
-* Breaking of underground pipelines and utilities.
-
-* Malfunction of sewage and drainage system. 
- 
-* Deterioration in function of building and infrastructures.
-
-&lt;a name=cite-ohenhenSlowlySurelyExposure2024&gt;&lt;/a&gt;[Ohenhen, Shirzaei, and Barnard (2024)](#bib-ohenhenSlowlySurelyExposure2024)
-
-]
 
 .panel[.panel-name[Environment]
 
@@ -252,6 +235,10 @@ From: &lt;a name=cite-sheryltiantongleeJakartaIndonesiaCapital2023&gt;&lt;/a&gt;
 
 * Disruption to daily activities of people.
 
+* Damage of infrastructure
+
+
+&lt;a name=cite-ohenhenSlowlySurelyExposure2024&gt;&lt;/a&gt;[Ohenhen, Shirzaei, and Barnard (2024)](#bib-ohenhenSlowlySurelyExposure2024)
 [Abidin, Andreas, Gumilar et al. (2015)](#bib-abidinEnvironmentalImpactsLand2015)
 ]
 ]
