--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x9e563a02b0b457f800efa9745090f1b","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x901e59889ee4ece9b0aa8e9a7a0a30d","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -193,23 +193,17 @@ From: &lt;a name=cite-sheryltiantongleeJakartaIndonesiaCapital2023&gt;&lt;/a&gt;
 
 .panelset[
 
+.panel[.panel-name[Social]
 
-.panel[.panel-name[Environment]
+* Possibility of seawater intrusion to the lowered groundwater table, thus lack of clean water supply
 
-* Changes in river canal and drain flow systems indirect.
+* Disruption to daily activities of people.
 
-* Frequent coastal flooding.
+* Damage of infrastructure
 
-* Wider expansion of flooding areas. 
 
-* Inundated areas and infrastructures.
-
-* Increasing the risks of inland sea water intrusion.
-
-* Deterioration in the quality of environmental condition (local ecosystem).
-
+&lt;a name=cite-ohenhenSlowlySurelyExposure2024&gt;&lt;/a&gt;[Ohenhen, Shirzaei, and Barnard (2024)](#bib-ohenhenSlowlySurelyExposure2024)
 &lt;a name=cite-abidinEnvironmentalImpactsLand2015&gt;&lt;/a&gt;[Abidin, Andreas, Gumilar, Sidiq, and Gamal (2015)](#bib-abidinEnvironmentalImpactsLand2015)
-
 ]
 
 .panel[.panel-name[Economic]
@@ -227,20 +221,22 @@ From: &lt;a name=cite-sheryltiantongleeJakartaIndonesiaCapital2023&gt;&lt;/a&gt;
 
 ]
 
-.panel[.panel-name[Social]
-
-* Deterioration in quality of living environment and life health 
-
-* Possibility of seawater intrusion to the lowered groundwater table, thus lack of clean water supply
-
-* Disruption to daily activities of people.
-
-* Damage of infrastructure
+.panel[.panel-name[Environment]
 
 
-&lt;a name=cite-ohenhenSlowlySurelyExposure2024&gt;&lt;/a&gt;[Ohenhen, Shirzaei, and Barnard (2024)](#bib-ohenhenSlowlySurelyExposure2024)
+* Frequent coastal flooding.
+
+* Inundated areas and infrastructures.
+
+* Increasing the risks of inland sea water intrusion.
+
+* Negative impacts on local ecosystem and biodiversity.
+
 [Abidin, Andreas, Gumilar et al. (2015)](#bib-abidinEnvironmentalImpactsLand2015)
+
 ]
+
+
 ]
 
 ---
