--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xc0a24165a7f4d86ac1635571de91490","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xb6f4a43b4884f48b180e31a45bc4b18","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -85,13 +85,14 @@ class: center, middle, inverse, title-slide
 .pull-left[ 
 
 ![](map_for_problem.jpg)&lt;!-- --&gt;
+&lt;span style="font-size: 11pt;"&gt; &lt;a name=cite-ploutarchostzampoglouWaterFreeFullText2023&gt;&lt;/a&gt;[Ploutarchos Tzampoglou, Loanna Llia, Konstantinos Karalis, Paraskevas Tsangaratos, Xia Zhao, and Wei Chan (2023)](#bib-ploutarchostzampoglouWaterFreeFullText2023). 
 
 ]
 
 .pull-right[ 
-* Jakarta, located in a lowland delta area with close to 50% below regional water level, is vulnerable to coastal and river flooding due to monsoons, sea-level rise and insufficient and faulty drainage infrastructure. 
+* Jakarta, located in a lowland delta area with close to 50% below regional water level, is vulnerable to coastal and river flooding due to monsoons, sea-level rise and insufficient and faulty drainage infrastructure &lt;a name=cite-c40citiesC40GoodPractice2016&gt;&lt;/a&gt;([C40 Cities, 2016](#bib-c40citiesC40GoodPractice2016)). 
 
-* An estimated 90% of North Jakarta is expected to lie below sea level in 2030 and the 13 rivers and canals of Jakarta are projected to stop flowing freely to the sea around 2025 if no measures are taken.
+* An estimated 90% of North Jakarta is expected to lie below sea level in 2030 ([C40 Cities, 2016](#bib-c40citiesC40GoodPractice2016)).
 
 
  ] 
@@ -104,7 +105,7 @@ class: center, middle, inverse, title-slide
 
 * As the sea-level rises, saltwater intrusion of groundwater tables also becomes a problem.
 
-* Currently, detailed understanding of the characteristics and mechanisms of land subsidence in Jakarta, both spatially and temporally, remains incomplete &lt;a name=cite-abidinStudyRiskImpacts2015&gt;&lt;/a&gt;([Abidin, Andreas, Gumilar, and Brinkman, 2015](#bib-abidinStudyRiskImpacts2015)). 
+* Currently, detailed understanding of the characteristics and mechanisms of land subsidence in Jakarta, both spatially and temporally, remains incomplete &lt;a name=cite-abidinStudyRiskImpacts2015&gt;&lt;/a&gt;([Abidin, Andreas, Gumilar, and Brinkman, 2015a](#bib-abidinStudyRiskImpacts2015)). 
 
 .panel[.panel-name[Existing Policy]
 
@@ -132,6 +133,7 @@ class: center, middle, inverse, title-slide
 ]
 
 &lt;img src="land_sub_rate_map.jpg" width="50%" style="display: block; margin: auto;" /&gt;
+&lt;span style="font-size: 11pt;"&gt; From: &lt;a name=cite-abidinStudyRiskImpacts2015a&gt;&lt;/a&gt;[Abidin, Andreas, Gumilar, and Brinkman (2015b)](#bib-abidinStudyRiskImpacts2015a)
 ]
 ]
 
@@ -166,7 +168,7 @@ class: center, middle, inverse, title-slide
 * This makes it the second largest mega city in the world. 
 
 &lt;img src="jkt_population.jpg" width="75%" style="display: block; margin: auto;" /&gt;
-From: &lt;a name=cite-sabinFreeStreetsWorld2023&gt;&lt;/a&gt;[Sabin (2023)](#bib-sabinFreeStreetsWorld2023)
+&lt;span style="font-size: 12pt;"&gt; From: &lt;a name=cite-sabinFreeStreetsWorld2023&gt;&lt;/a&gt;[Sabin (2023)](#bib-sabinFreeStreetsWorld2023)
 
 ]
 ]
@@ -190,7 +192,7 @@ From: &lt;a name=cite-sabinFreeStreetsWorld2023&gt;&lt;/a&gt;[Sabin (2023)](#bib
 .pull-right[
 &lt;img src="jakarta_sinking_animated.gif" width="320" height="240" /&gt;
 
-From: &lt;a name=cite-sheryltiantongleeJakartaIndonesiaCapital2023&gt;&lt;/a&gt;[Sheryl Tian Tong Lee and Grace Sihombing (2023)](#bib-sheryltiantongleeJakartaIndonesiaCapital2023)
+&lt;span style="font-size: 12pt;"&gt; From: &lt;a name=cite-sheryltiantongleeJakartaIndonesiaCapital2023&gt;&lt;/a&gt;[Sheryl Tian Tong Lee and Grace Sihombing (2023)](#bib-sheryltiantongleeJakartaIndonesiaCapital2023)
 ]
 
 
@@ -557,21 +559,21 @@ The NCICD considers a variety of aspects such as flood safety, land reclamation,
 
 .pull-left[
 
-Susceptibility Map 
+**Susceptibility Map** 
 
 &lt;img src="eg_susceptibility.png" width="90%" style="display: block; margin: auto;" /&gt;
 
-Source: &lt;a name=cite-gharechaeeLandSubsidenceSusceptibility2023&gt;&lt;/a&gt;[Gharechaee, Samani, Sigaroodi, Baloochiyan, Moosavi, Hubbart, and Sadeghi (2023)](#bib-gharechaeeLandSubsidenceSusceptibility2023)
+&lt;span style="font-size: 12pt;"&gt; Source: &lt;a name=cite-gharechaeeLandSubsidenceSusceptibility2023&gt;&lt;/a&gt;[Gharechaee, Samani, Sigaroodi, Baloochiyan, Moosavi, Hubbart, and Sadeghi (2023)](#bib-gharechaeeLandSubsidenceSusceptibility2023)
 
 ]
 
 .pull-right[
 
-Risk Map 
+**Risk Map** 
 
 &lt;img src="eg_risk.png" width="87%" style="display: block; margin: auto;" /&gt;
 
-Source: [Bhattarai and Kondoh (2017)](#bib-bhattaraiRiskAssessmentLand2017)
+&lt;span style="font-size: 12pt;"&gt; Source: [Bhattarai and Kondoh (2017)](#bib-bhattaraiRiskAssessmentLand2017)
 ]
 
 
@@ -758,10 +760,16 @@ class: text-justify
 
 ## References 1
 &lt;a name=bib-abidinStudyRiskImpacts2015&gt;&lt;/a&gt;[Abidin, H. Z., H. Andreas,
-I. Gumilar, et al.](#cite-abidinStudyRiskImpacts2015) (2015). "Study on
-the Risk and Impacts of Land Subsidence in Jakarta". In: _Proceedings
-of the International Association of Hydrological Sciences_ 372, pp.
-115-120.
+I. Gumilar, et al.](#cite-abidinStudyRiskImpacts2015) (2015a). "Study
+on the Risk and Impacts of Land Subsidence in Jakarta". In:
+_Proceedings of the International Association of Hydrological Sciences_
+372, pp. 115-120.
+
+&lt;a name=bib-abidinStudyRiskImpacts2015a&gt;&lt;/a&gt;[Abidin, H. Z., H. Andreas,
+I. Gumilar, et al.](#cite-abidinStudyRiskImpacts2015a) (2015b). "Study
+on the Risk and Impacts of Land Subsidence in Jakarta". In:
+_Proceedings of the International Association of Hydrological Sciences_
+372, pp. 115-120.
 
 &lt;a name=bib-abidinLandSubsidenceJakarta2011&gt;&lt;/a&gt;[Abidin, H. Z., H.
 Andreas, I. Gumilar, et al.](#cite-abidinLandSubsidenceJakarta2011)
@@ -784,16 +792,21 @@ Kondoh](#cite-bhattaraiRiskAssessmentLand2017) (2017). "Risk Assessment
 of Land Subsidence in Kathmandu Valley, Nepal, Using Remote Sensing and
 GIS". In: _Advances in Remote Sensing_ 06.02, p. 132.
 
+---
+class: text-justify
+
+## References 2
 &lt;a name=bib-bottLandSubsidenceJakarta2021&gt;&lt;/a&gt;[Bott, L., T. Schöne, J.
 Illigner, et al.](#cite-bottLandSubsidenceJakarta2021) (2021). "Land
 Subsidence in Jakarta and Semarang Bay - The Relationship between
 Physical Processes, Risk Perception, and Household Adaptation". In:
 _Ocean &amp; Coastal Management_ 211, p. 105775.
 
----
-class: text-justify
+&lt;a name=bib-c40citiesC40GoodPractice2016&gt;&lt;/a&gt;[C40
+Cities](#cite-c40citiesC40GoodPractice2016) (2016). _C40 Good Practice
+Guides: Jakarta - Coastal Defence Strategy and Flood Mapping_.
+https://www.c40.org/case-studies/c40-good-practice-guides-jakarta-coastal-defence-strategy-and-flood-mapping/.
 
-## References 2
 &lt;a name=bib-dedenrukmanaFloodGovernanceJakarta2016&gt;&lt;/a&gt;[Deden
 Rukmana](#cite-dedenrukmanaFloodGovernanceJakarta2016) (2016). _Flood
 Governance in Jakarta: The Role of CBOs in Mitigating Annual Floods_.
@@ -805,7 +818,10 @@ al.](#cite-eghrariLANDSUBSIDENCESUSCEPTIBILITY2023) (2023). "LAND
 SUBSIDENCE SUSCEPTIBILITY MAPPING USING MACHINE LEARNING ALGORITHMS".
 In: _ISPRS Annals of the Photogrammetry, Remote Sensing and Spatial
 Information Sciences_ X-4-W1-2022, pp. 129-136.
+---
+class: text-justify
 
+## References 3
 &lt;a name=bib-falashifahGIANTSEAWALL2021&gt;&lt;/a&gt;[Falashifah,
 F.](#cite-falashifahGIANTSEAWALL2021) (2021). _GIANT SEA WALL
 CONSTRUCTION: IS IT THE RIGHT SOLUTION TO OVERCOME JAKARTA'S SINKING?
@@ -817,10 +833,7 @@ al.](#cite-gharechaeeLandSubsidenceSusceptibility2023) (2023). "Land
 Subsidence Susceptibility Mapping Using Interferometric Synthetic
 Aperture Radar (InSAR) and Machine Learning Models in a Semiarid Region
 of Iran". In: _Land_ 12.4, p. 843.
----
-class: text-justify
 
-## References 3
 &lt;a name=bib-julianagunawanBuildingIndonesiaResilience2016&gt;&lt;/a&gt;[Gunawan,
 J.](#cite-julianagunawanBuildingIndonesiaResilience2016) (2016).
 _Building Indonesia's Resilience to Disaster : Experiences from
