gantt chart bigger

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xb6f4a43b4884f48b180e31a45bc4b18","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x71c7a0473114cdfaa3d496d16e79f22","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -84,7 +84,7 @@ class: center, middle, inverse, title-slide
 
 .pull-left[ 
 
-![](map_for_problem.jpg)&lt;!-- --&gt;
+&lt;img src="map_for_problem.jpg" width="2133" /&gt;
 &lt;span style="font-size: 11pt;"&gt; &lt;a name=cite-ploutarchostzampoglouWaterFreeFullText2023&gt;&lt;/a&gt;[Ploutarchos Tzampoglou, Loanna Llia, Konstantinos Karalis, Paraskevas Tsangaratos, Xia Zhao, and Wei Chan (2023)](#bib-ploutarchostzampoglouWaterFreeFullText2023). 
 
 ]
@@ -593,14 +593,13 @@ class: top
 &lt;a name=cite-tademayurApplicationsRemoteSensing&gt;&lt;/a&gt;([Tade Mayur, 2022](#bib-tademayurApplicationsRemoteSensing); [Taftazani, Kazama, and Takizawa, 2022](#bib-taftazaniSpatialAnalysisGroundwater2022))
 ([Bott, Schöne, Illigner et al., 2021](#bib-bottLandSubsidenceJakarta2021))
 ---
-
 ## Project: Gantt Chart
 
 **Experts: TL&lt;sup&gt;1&lt;/sup&gt;, LDA&lt;sup&gt;2&lt;/sup&gt;, GE&lt;sup&gt;3&lt;/sup&gt;, GO&lt;sup&gt;4&lt;/sup&gt;, WRE&lt;sup&gt;5&lt;/sup&gt;, NO&lt;sup&gt;6&lt;/sup&gt;.**
 
-&lt;img src="GC.jpg" width="75%" style="display: block; margin: auto;" /&gt;
+&lt;img src="GC.jpg" width="85%" style="display: block; margin: auto;" /&gt;
 .footnote[
-&lt;span style="font-size: 12pt;"&gt; [1] Team Leader [2] Lead Data Analyst [3] Geo-spatial Expert [4] Geologist [5] Water Resource Expert [6] Nodal Officer, M=Month, xMS=Milestone, Color yellow=Activity Spread Over Month
+&lt;span style="font-size: 8pt;"&gt; [1] Team Leader [2] Lead Data Analyst [3] Geo-spatial Expert [4] Geologist [5] Water Resource Expert [6] Nodal Officer, M=Month, xMS=Milestone, Color yellow=Activity Spread Over Month
 ([Tade Mayur, 2022](#bib-tademayurApplicationsRemoteSensing); [Taftazani, Kazama, and Takizawa, 2022](#bib-taftazaniSpatialAnalysisGroundwater2022)) &lt;/span&gt; 
 
 ]
@@ -712,11 +711,11 @@ class: top
 
 - Problem of mistrust between public and government affecting participatory and consultative meetings &lt;a name=cite-dedenrukmanaFloodGovernanceJakarta2016&gt;&lt;/a&gt;([Deden Rukmana, 2016](#bib-dedenrukmanaFloodGovernanceJakarta2016)). 
 
-- Unexpected employee turnover.
+- Unexpected "Employee Turnover"
 
 - Unexpected data cost at freeware platforms ([Bott, Schöne, Illigner et al., 2021](#bib-bottLandSubsidenceJakarta2021)).
 
-- Change of government.
+- Change of Government.
  
 ]
 
@@ -724,13 +723,13 @@ class: top
 
 ### Mitigation
 
-- Participatory Learning Application of consultative meeting would create trust and engagement between the public and government.
+- Participatory Learning Application of consultative meetings would create trust and engagement between the public and government.
 
-- Maintaining the data infrastructure of our project for smooth workflow.
+- Maintaining a standard SOP so that the project isn't affected by leaving employees.
 
 - Alternative data sets from other satellites are available.
 
-- Uniform budget-head transition with changing political parties.
+- Uniform Budget-Head so that changing political parties doesn't affect the project.
 
 ]
 
@@ -744,13 +743,13 @@ class: text-justify
 
 - Jakarta is sinking and the NCICD does little to address the main cause which is land subsidence. 
 
-- This project aims to improve monitoring and decision-making by providing up-to-date land subsidence susceptibility and risk maps.
+- Our project will improve monitoring and decision-making by providing up-to-date land subsidence susceptibility and risk maps.
 
 - This will allow for:
   - Reinforcement of the NCICD plan.
-  - Further evidence based and data driven policy and action.
+  - Further evidence-based and data-driven policy and action.
   - Prevent future economic losses.
-  - Mitigate fluvial, pluvial and coastal flood risk.
+  - Mitigate fluvial, pluvial, and coastal flood risk.
 
 
 
