minor edit in objectives

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x71c7a0473114cdfaa3d496d16e79f22","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x7d77df6708a4994862755a61e5196d2","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -84,7 +84,7 @@ class: center, middle, inverse, title-slide
 
 .pull-left[ 
 
-&lt;img src="map_for_problem.jpg" width="2133" /&gt;
+![](map_for_problem.jpg)&lt;!-- --&gt;
 &lt;span style="font-size: 11pt;"&gt; &lt;a name=cite-ploutarchostzampoglouWaterFreeFullText2023&gt;&lt;/a&gt;[Ploutarchos Tzampoglou, Loanna Llia, Konstantinos Karalis, Paraskevas Tsangaratos, Xia Zhao, and Wei Chan (2023)](#bib-ploutarchostzampoglouWaterFreeFullText2023). 
 
 ]
@@ -367,7 +367,7 @@ The NCICD considers a variety of aspects such as flood safety, land reclamation,
   
 - Using these products:
 
-  - Identify areas that require careful monitoring and deployment of continuous global positioning systems. 
+  - Identify areas that require careful monitoring.
   - Provide evidence-based recommended action on sustainable water management and infrastructure zoning.
   - Comply with relevant national and international policies to intervene as appropriate. 
 
