--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Supporting Jakarta To Stop Land Subsidence</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Lama Alswliman, Wing Ka Ho, Madeleine Potter, Geetanjli Rani &amp; Burhan Ahmad Wani" />
+    <meta name="author" content="Jakarta Group" />
     <script src="libs/header-attrs-2.25/header-attrs.js"></script>
     <script src="libs/js-cookie-3.0.0/js.cookie.js"></script>
     <script src="libs/peerjs-1.3.1/peerjs.min.js"></script>
@@ -29,7 +29,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x7d77df6708a4994862755a61e5196d2","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x6a7b084d00e46a4a9bba4a7824283fb","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -56,7 +56,7 @@ class: center, middle, inverse, title-slide
 ## Act now! Stop the sinking!
 ]
 .author[
-### Lama Alswliman, Wing Ka Ho, Madeleine Potter, Geetanjli Rani &amp; Burhan Ahmad Wani
+### Jakarta Group
 ]
 .institute[
 ### CASA0023 Group Project
@@ -383,7 +383,7 @@ The NCICD considers a variety of aspects such as flood safety, land reclamation,
 .panelset[
 .panel[.panel-name[Environmental]
 
-&lt;table class="table" style="font-size: 10px; width: auto !important; margin-left: auto; margin-right: auto;"&gt;
+&lt;table class="table" style="font-size: 13.5px; width: auto !important; margin-left: auto; margin-right: auto;"&gt;
  &lt;thead&gt;
   &lt;tr&gt;
    &lt;th style="text-align:left;"&gt; Variable &lt;/th&gt;
@@ -462,7 +462,7 @@ The NCICD considers a variety of aspects such as flood safety, land reclamation,
 ]
 
 .panel[.panel-name[Previous Land Subsidence]
-&lt;table class="table" style="font-size: 12px; width: auto !important; margin-left: auto; margin-right: auto;"&gt;
+&lt;table class="table" style="font-size: 16px; width: auto !important; margin-left: auto; margin-right: auto;"&gt;
  &lt;thead&gt;
   &lt;tr&gt;
    &lt;th style="text-align:left;"&gt; Variable &lt;/th&gt;
@@ -485,7 +485,7 @@ The NCICD considers a variety of aspects such as flood safety, land reclamation,
 ]
 
 .panel[.panel-name[Social]
-&lt;table class="table" style="font-size: 12px; width: auto !important; margin-left: auto; margin-right: auto;"&gt;
+&lt;table class="table" style="font-size: 16px; width: auto !important; margin-left: auto; margin-right: auto;"&gt;
  &lt;thead&gt;
   &lt;tr&gt;
    &lt;th style="text-align:left;"&gt; Variable &lt;/th&gt;
